# queryTools

./: .flake8  .pylintrc  README.md  __init__.py  globQuery.py  grepQuery.py  install.bat  pyproject.toml  query.py  reQuery.py  requirements_dev.txt  setup.cfg  simpleQuery.py  tape.py  test.bat  treeInterface.py
test/: test_ReQuery.py
